[gd_scene load_steps=7 format=2]

[ext_resource path="res://icon.png" type="Texture" id=1]
[ext_resource path="res://Overlap/PlayerDetection.tscn" type="PackedScene" id=2]
[ext_resource path="res://Enemies/BasicEnemy.gd" type="Script" id=3]
[ext_resource path="res://Overlap/WanderController.tscn" type="PackedScene" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 16.0

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 48.0

[node name="BasicEnemy" type="KinematicBody2D"]
collision_mask = 3
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="EnemyGaze" type="Position2D" parent="."]

[node name="PlayerDetection" parent="EnemyGaze" instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="EnemyGaze/PlayerDetection" index="0"]
position = Vector2( 0, 52 )
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[editable path="EnemyGaze/PlayerDetection"]
